--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </button>
               </div>
          </section>
-         <section class="row">
+         <section class="row my-5">
             <aside class="col-12 col-md-4 col-lg-3 my-2">
               <div class="card">
                 <img src="Img/002.jpg" class="card-img-top" alt="img2">
