--- a/categorias.html
+++ b/categorias.html
@@ -22,8 +22,8 @@
                   <li class="nav-item">
                     <a class="nav-link"  href="index.html">Inicio</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link active dropdown-toggle" aria-current="page" href="categorias.html">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="categorias.html">
                       Categorias
                     </a>
                   </li>
